--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,39 +1,92 @@
 <resources>
-    <string name="app_name">myNodeMCU-HOME</string>
-    <string name="searchHint">myNodeMCU</string>
+
+    <!--<string name="searchHint">myNodeMCU</string>
     <string name="conBTN">FIND</string>
     <string name="conBTNaf">CONNECTED</string>
     <string name="ipLbl">IP ADDRESS:</string>
     <string name="portLbl">PORT:</string>
-    <string name="goCTRLS">GO TO CONTROL BUTTONS</string>
-    <string name="d0">D0:</string>
-    <string name="d1">D1:</string>
-    <string name="d2">D2:</string>
-    <string name="d3">D3:</string>
-    <string name="d4">D4:</string>
-    <string name="d5">D5:</string>
-    <string name="d6">D6:</string>
-    <string name="d7">D7:</string>
-    <string name="d8">D8:</string>
-    <string name="on">ON</string>
-    <string name="off">OFF</string>
+    <string name="goCTRLS">GO TO CONTROL BUTTONS</string>-->
+
+<!--
     <string name="credit">Designed and Developed by</string>
     <string name="creditTo">#praveensmedia</string>
     <string name="ipAD">click on FIND</string>
     <string name="porMe">port</string>
     <string name="loc">.local</string>
-    <string name="feedBack">Feedback:</string>
-    <string name="feedHint">fromNodeMCU</string>
+    <string name="feedBack">Feedback from NodeMCU</string>
+
     <string name="hos">serviceName</string>
     <string name="conf">ESP-CONFIG</string>
     <string name="goWfS">GO TO WIFI SETTINGS</string>
     <string name="rsv">REFRESH</string>
     <string name="noco">Not Connected</string>
-    <string name="info">Please go to WiFi settings and connect to myNodeMCU(default) your Esp Device Access point then click On REFRESH </string>
-    <string name="ssidHin">Your Home WIfi-SSID</string>
-    <string name="passHin">password</string>
-    <string name="ctrlScrnName">myNodeMCU-ControlButtons</string>
-    <string name="confScrn">myNodeMCU-Configuration</string>
+    <string name="info">Please go to WiFi settings and connect to myNodeMCU(default) your Esp Device Access point then click On REFRESH </string>-->
 
+
+    <!--SplashScreen_Strings-->
+    <string name="app_name">myNodeMCU_CONFIG_CONTROL</string>
+    <string name="strDNS">._DNS-SD.</string>
+    <string name="strMake">HandCrafted by</string>
+    <string name="strMkBy">#praveensmedia</string>
+    <string name="strMFD">HYDERABAD-INDIA</string>
+    <string name="imgDisc">its app-logo as splash screen</string>
+
+    <!--Home_Strings_txtViews-->
+    <string name="strName">NAME:</string>
+    <string name="strType">TYPE:</string>
+    <string name="strIP">IP:</string>
+    <string name="strPORT">PORT:</string>
+    <string name="txtSR">Service👆Resolved👇</string>
+    <string name="txtDN">Discoverd Services👇 on your network</string>
+    <string name="txtSrName">serviceName</string>
+    <string name="txtSrType">serviceType</string>
+    <string name="txtIP">IP Address</string>
+    <string name="txtPort">Port</string>
+    <string name="txtConfig">CONFIG</string>
+    <string name="txtControl">CONTROLS</string>
+    <string name="txtHelp">-HELP-</string>
+    <string name="txtWEB">www.praveensmedia.com</string>
+    <string name="txtLink"><a href="http://bit.ly/myNodeMCU">-HELP-</a></string>
+
+    <!--Controls_Strings_txtViews-->
+    <string name="scrnControls">Controls</string>
+    <string name="strOn">HIGH</string>
+    <string name="strOff">LOW</string>
+    <string name="txtRSP">Response👇</string>
+    <string name="d0">--D0--</string>
+    <string name="d1">--D1--</string>
+    <string name="d2">--D2--</string>
+    <string name="d3">--D3--</string>
+    <string name="d4">--D4--</string>
+    <string name="d5">--D5--</string>
+    <string name="d6">--D6--</string>
+    <string name="d7">--D7--</string>
+    <string name="d8">--D8--</string>
+    <string name="hintUrlSend">…completeUrl…</string>
+
+    <!--Config_Strings_txtViews-->
+    <string name="txtSPT">SUPPORT👇</string>
+    <string name="hintSSID">Your WIfi-SSID</string>
+    <string name="hintPASS">password</string>
+    <string name="txtCRED">UPDATE CREDENTIALS</string>
+    <string name="hintResponse">response from your device</string>
+
+    <!--Strings for TEST_Add IDs-->
+    <string name="appIDforAds">ca-app-pub-1910150019561767~7064505214</string>
+    <string name="interstialControl">ca-app-pub-3940256099942544/1033173712</string>
+    <string name="interstialConfig">ca-app-pub-3940256099942544/1033173712</string>
+    <string name="interstialHome">ca-app-pub-3940256099942544/1033173712</string>
+    <string name="bannerHome">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="bannerControl">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="bannerConfig">ca-app-pub-3940256099942544/6300978111</string>
+
+    <!--Strings for ORIGINAL_Add IDs-->
+    <!--<string name="appIDforAds">ca-app-pub-1910150019561767~7064505214</string>
+    <string name="interstialControl">ca-app-pub-1910150019561767/9962657298</string>
+    <string name="interstialConfig">ca-app-pub-1910150019561767/6075437737</string>
+    <string name="interstialHome">ca-app-pub-1910150019561767/6149775149</string>
+    <string name="bannerHome">ca-app-pub-1910150019561767/4330530667</string>
+    <string name="bannerControl">ca-app-pub-1910150019561767/3981022788</string>
+    <string name="bannerConfig">ca-app-pub-1910150019561767/6112362104</string>-->
 
 </resources>
